sumo/tests/traci/VariableRetrieval/POI/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 0xa7 0xff dummy
simstep 6 1
